# job-application-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: personal.example.yaml  sources.example.yaml
docs/: SYSTEM_DESIGN.md
src/: __init__.py
src/cli/: __init__.py  main.py  scrape.py
src/config/: __init__.py  personal.py  settings.py  sources.py
src/db/: __init__.py  base.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial_schema.py
src/drafting/: __init__.py
src/scrapers/: __init__.py  base.py  browser.py  custom.py  greenhouse.py  handshake.py  html_clean.py  lever.py  linkedin.py  location.py  persistence.py  registry.py  workday.py
src/tasks/: __init__.py  app.py  scrape.py
tests/: conftest.py  test_greenhouse.py  test_html_clean.py  test_lever.py  test_location.py  test_migrations.py  test_models.py  test_persistence.py  test_personal.py  test_scrape_task_integration.py  test_settings.py  test_sources_config.py
